# MSISDN_Client

./: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt~  dnsclient.cpp  dnsclient.cpp.autosave  dnsclient.h  dnsstructs.h  logger.cpp  logger.h  main.cpp  main.cpp.autosave
