project(MSISDN_Client C CXX)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS  system thread chrono REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_library(libnnz11 STATIC IMPORTED)
set_target_properties(libnnz11 PROPERTIES IMPORTED_LOCATION /usr/local/lib/instantclient_11_2/libnnz11.so)
add_library(libclntsh SHARED IMPORTED)
set_target_properties(libclntsh PROPERTIES IMPORTED_LOCATION /usr/local/lib/instantclient_11_2/libclntsh.so.11.1)
add_library(libociei STATIC IMPORTED)
set_target_properties(libociei PROPERTIES IMPORTED_LOCATION /usr/local/lib/instantclient_11_2/libociei.so)
add_library(libocilib STATIC IMPORTED)
set_target_properties(libocilib PROPERTIES IMPORTED_LOCATION /usr/local/lib/libocilib.a)
target_link_libraries(MSISDN_Client libocilib)
target_link_libraries(MSISDN_Client libnnz11)
target_link_libraries(MSISDN_Client libclntsh)
target_link_libraries(MSISDN_Client libociei)
target_link_libraries(MSISDN_Client ${Boost_LIBRARIES})
